--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
                 Warning stinky breath.<br></td>
               <td>👍</td>
             </tr>
+            <tr>
+              <td><a href="https://www.google.com/maps/place/Sleepy+Bee+Cafe/@39.1002687,-84.5123466,15z/data=!4m2!3m1!1s0x0:0x63c80b84291acd85?sa=X&ved=2ahUKEwjwsteH3-fmAhVXBc0KHRG7A4kQ_BIwDXoECAgQCA">Sleepy Bee Cafe</a></td>
+              <td>A mushroom patty.<br>
+                Some Thousand Island dressing.<br>
+                A ciabatta bun.<br></td>
+              <td>👍👍</td>
+            </tr>
           </table>
     </body>
 </html>
