--- a/index.html
+++ b/index.html
@@ -155,8 +155,21 @@
           Some Thousand Island dressing.<br />
           A ciabatta bun.<br />
         </td>
-
         <td>👍👍</td>
+      </tr>
+      <tr>
+        <td>
+          <a
+            href="https://www.google.com/maps/place/Yard+House/@39.0969133,-84.5104814,15z/data=!4m2!3m1!1s0x0:0x42ad49a345ea9ed1?sa=X&ved=2ahUKEwiE0NiF-YbnAhXGZs0KHWFTD-gQ_BIwGHoECB8QCA"
+            >Yard House</a
+          >
+        </td>
+        <td>
+          Beyond Burger, THICC.<br />
+          My surprise at this chain, big.<br />
+          Veggie Menu, Large.<br />
+        </td>
+        <td>🤑</td>
       </tr>
     </table>
   </body>
