--- a/index.html
+++ b/index.html
@@ -1,28 +1,47 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html
+  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>VeggieBurger</title>
-  </head>
-  <style>
-    table {
-      font-family: arial, sans-serif;
-      border-collapse: collapse;
-      width: 100%;
-      color: wheat;
-    }
 
-    a {
-      color: #a9d6f5;
-    }
+<head>
+  <title>VeggieBurger</title>
+</head>
+<style>
+  table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 50%;
+    color: wheat;
+    text-align: center;
+  }
 
-    td,
-    th {
-      text-align: left;
-      padding: 8px;
-    }
-  </style>
-  <body style="background-color:rgb(59, 59, 59)" ,>
+  a {
+    color: #a9d6f5;
+  }
+
+  td,
+  th {
+    text-align: left;
+    padding: 8px;
+  }
+  table.center {
+    margin-left:auto; 
+    margin-right:auto;
+  }
+
+  .container {
+    text-align: center;
+  }
+
+  .container pre {
+    display: inline-block;
+    text-align: left;
+  }
+</style>
+
+<body style="background-color:rgb(59, 59, 59)">
+  <div class="container">
+
     <pre style="color:wheat">
            _    __                 _      ____                            
           | |  / /__  ____ _____ _(_)__  / __ )__  ___________ ____  _____
@@ -59,109 +78,101 @@
              ╫╣╣                                                ╫╫╫
               ╙╣╫╣╗╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╖╗╗╣╣╣╜
                  ╙╜╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╝╜╙└
-        </pre
-    >
-    <table style="width:50%">
-      <tr>
-        <th>Restaraunt</th>
-        <th>Thoughts</th>
-        <th>Rating</th>
-      </tr>
-      <tr>
-        <td>
-          <a
-            href="https://www.google.com/maps/place/Krueger's+Tavern/@39.1086303,-84.5150254,15z/data=!4m2!3m1!1s0x0:0x1a534c39be85cdda?sa=X&ved=2ahUKEwjJ9MjWw4XkAhXnx1kKHZFnC-IQ_BIwCnoECA0QCA"
-            >Kruger's Tavern</a
-          >
-        </td>
-        <td>
-          It was delicious.<br />
-          The burger was made of beets.<br />
-          A crunchy texture.<br />
-        </td>
+        </pre>
+    <div class="container">
 
-        <td>👍👍</td>
-      </tr>
-      <tr>
-        <td>
-          <a
-            href="https://www.google.com/maps/place/Maplewood+Kitchen+and+Bar/@39.1015132,-84.5151132,15z/data=!4m5!3m4!1s0x0:0xe30a8b30b48b137c!8m2!3d39.1015132!4d-84.5151132"
-            >Maplewood Kitchen and Bar</a
-          >
-        </td>
-        <td>
-          A housemade patty.<br />
-          16 bricks seasame bun.<br />
-          The burger was good.<br />
-        </td>
+      <table class="center">
+        <tr>
+          <th>Restaraunt</th>
+          <th>Thoughts</th>
+          <th>Rating</th>
+        </tr>
+        <tr>
+          <td>
+            <a
+              href="https://www.google.com/maps/place/Krueger's+Tavern/@39.1086303,-84.5150254,15z/data=!4m2!3m1!1s0x0:0x1a534c39be85cdda?sa=X&ved=2ahUKEwjJ9MjWw4XkAhXnx1kKHZFnC-IQ_BIwCnoECA0QCA">Kruger's
+              Tavern</a>
+          </td>
+          <td>
+            It was delicious.<br />
+            The burger was made of beets.<br />
+            A crunchy texture.<br />
+          </td>
 
-        <td>🤷‍♀️</td>
-      </tr>
-      <tr>
-        <td>
-          <a
-            href="https://www.google.com/maps/place/BurgerFi/@39.0971667,-84.5094606,15z/data=!4m5!3m4!1s0x0:0x2e82a4831bcb0c67!8m2!3d39.0971667!4d-84.5094606"
-            >BurgerFi</a
-          >
-        </td>
-        <td>
-          Full speed big ass fans.<br />
-          Fried quinoa burger patty.<br />
-          High in calories.<br />
-        </td>
+          <td>👍👍</td>
+        </tr>
+        <tr>
+          <td>
+            <a
+              href="https://www.google.com/maps/place/Maplewood+Kitchen+and+Bar/@39.1015132,-84.5151132,15z/data=!4m5!3m4!1s0x0:0xe30a8b30b48b137c!8m2!3d39.1015132!4d-84.5151132">Maplewood
+              Kitchen and Bar</a>
+          </td>
+          <td>
+            A housemade patty.<br />
+            16 bricks seasame bun.<br />
+            The burger was good.<br />
+          </td>
 
-        <td>🤷‍♂️</td>
-      </tr>
-      <tr>
-        <td>
-          <a
-            href="https://www.google.com/maps/place/BurgerFi/@39.0971667,-84.5094606,15z/data=!4m5!3m4!1s0x0:0x2e82a4831bcb0c67!8m2!3d39.0971667!4d-84.5094606"
-            >BurgerFi</a
-          >
-        </td>
-        <td>
-          I tried it again.<br />
-          The Beyond Meat vegan burg
-          <br />
-          Above quinoa.<br />
-        </td>
+          <td>🤷‍♀️</td>
+        </tr>
+        <tr>
+          <td>
+            <a
+              href="https://www.google.com/maps/place/BurgerFi/@39.0971667,-84.5094606,15z/data=!4m5!3m4!1s0x0:0x2e82a4831bcb0c67!8m2!3d39.0971667!4d-84.5094606">BurgerFi</a>
+          </td>
+          <td>
+            Full speed big ass fans.<br />
+            Fried quinoa burger patty.<br />
+            High in calories.<br />
+          </td>
 
-        <td>🥜🍚</td>
-      </tr>
-      <tr>
-        <td>
-          <a
-            href="https://www.google.com/maps/place/Taste+of+Belgium+-+Over+The+Rhine/@39.0982402,-84.5204767,14z/data=!4m8!1m2!2m1!1staste+of+belgium!3m4!1s0x8841b15624b160dd:0x47ad51e48e45cf48!8m2!3d39.1082044!4d-84.5149166"
-            >Taste of Belgium</a
-          >
-        </td>
-        <td>
-          Patty of black beans.<br />
-          Spicy with a side of frites.<br />
-          Warning stinky breath.<br />
-        </td>
+          <td>🤷‍♂️</td>
+        </tr>
+        <tr>
+          <td>
+            <a
+              href="https://www.google.com/maps/place/BurgerFi/@39.0971667,-84.5094606,15z/data=!4m5!3m4!1s0x0:0x2e82a4831bcb0c67!8m2!3d39.0971667!4d-84.5094606">BurgerFi</a>
+          </td>
+          <td>
+            I tried it again.<br />
+            The Beyond Meat vegan burg
+            <br />
+            Above quinoa.<br />
+          </td>
 
-        <td>👍</td>
-      </tr>
-      <tr>
+          <td>🥜🍚</td>
+        </tr>
+        <tr>
+          <td>
+            <a
+              href="https://www.google.com/maps/place/Taste+of+Belgium+-+Over+The+Rhine/@39.0982402,-84.5204767,14z/data=!4m8!1m2!2m1!1staste+of+belgium!3m4!1s0x8841b15624b160dd:0x47ad51e48e45cf48!8m2!3d39.1082044!4d-84.5149166">Taste
+              of Belgium</a>
+          </td>
+          <td>
+            Patty of black beans.<br />
+            Spicy with a side of frites.<br />
+            Warning stinky breath.<br />
+          </td>
+
+          <td>👍</td>
+        </tr>
+        <tr>
+          <td>
+            <a
+              href="https://www.google.com/maps/place/Sleepy+Bee+Cafe/@39.1002687,-84.5123466,15z/data=!4m2!3m1!1s0x0:0x63c80b84291acd85?sa=X&ved=2ahUKEwjwsteH3-fmAhVXBc0KHRG7A4kQ_BIwDXoECAgQCA">Sleepy
+              Bee Cafe</a>
+          </td>
+          <td>
+            A mushroom patty.<br />
+            Some Thousand Island dressing.<br />
+            A ciabatta bun.<br />
+          </td>
+          <td>👍👍</td>
+        </tr>
         <td>
           <a
-            href="https://www.google.com/maps/place/Sleepy+Bee+Cafe/@39.1002687,-84.5123466,15z/data=!4m2!3m1!1s0x0:0x63c80b84291acd85?sa=X&ved=2ahUKEwjwsteH3-fmAhVXBc0KHRG7A4kQ_BIwDXoECAgQCA"
-            >Sleepy Bee Cafe</a
-          >
-        </td>
-        <td>
-          A mushroom patty.<br />
-          Some Thousand Island dressing.<br />
-          A ciabatta bun.<br />
-        </td>
-        <td>👍👍</td>
-      </tr>
-        <td>
-          <a
-            href="https://www.google.com/maps/place/Yard+House/@39.0969133,-84.5104814,15z/data=!4m2!3m1!1s0x0:0x42ad49a345ea9ed1?sa=X&ved=2ahUKEwiE0NiF-YbnAhXGZs0KHWFTD-gQ_BIwGHoECB8QCA"
-            >Yard House</a
-          >
+            href="https://www.google.com/maps/place/Yard+House/@39.0969133,-84.5104814,15z/data=!4m2!3m1!1s0x0:0x42ad49a345ea9ed1?sa=X&ved=2ahUKEwiE0NiF-YbnAhXGZs0KHWFTD-gQ_BIwGHoECB8QCA">Yard
+            House</a>
         </td>
         <td>
           Beyond Burger, THICC.<br />
@@ -169,21 +180,21 @@
           Veggie Menu, Large.<br />
         </td>
         <td>🤑</td>
-      </tr>
-      <tr>
-        <td>
-          <a
-            href="https://www.google.com/maps/place/BrewDog+Cincinnati/@39.1087122,-84.5112579,17z/data=!3m1!4b1!4m5!3m4!1s0x8841b38fbf017103:0x2b8347cca7ce052c!8m2!3d39.1087122!4d-84.5090692"
-            >Brew Dog</a
-          >
-        </td>
-        <td>
-          Standard beyond burg<br />
-          Beer was better than burger.<br />
-          Get the 'Jet Black Heart'.<br />
-        </td>
-        <td>🤷</td>
-      </tr>
-    </table>
-  </body>
+        </tr>
+        <tr>
+          <td>
+            <a
+              href="https://www.google.com/maps/place/BrewDog+Cincinnati/@39.1087122,-84.5112579,17z/data=!3m1!4b1!4m5!3m4!1s0x8841b38fbf017103:0x2b8347cca7ce052c!8m2!3d39.1087122!4d-84.5090692">Brew
+              Dog</a>
+          </td>
+          <td>
+            Standard beyond burg<br />
+            Beer was better than burger.<br />
+            Get the 'Jet Black Heart'.<br />
+          </td>
+          <td>🤷</td>
+        </tr>
+      </table>
+</body>
+
 </html>
