add 50 west buger stand

--- a/index.html
+++ b/index.html
@@ -188,11 +188,24 @@
               Dog</a>
           </td>
           <td>
-            Standard beyond burg<br />
+            Standard beyond burg.<br />
             Beer was better than burger.<br />
             Get the 'Jet Black Heart'.<br />
           </td>
           <td>🤷</td>
+        </tr>
+        <tr>
+          <td>
+            <a
+              href="https://www.google.com/maps/place/Fifty+West+Burger+Bar/@39.1387708,-84.3562669,17z/data=!3m1!4b1!4m5!3m4!1s0x8841abb423daefd3:0x1b7b8a346e1bb32b!8m2!3d39.1387708!4d-84.3540782">
+              Fifty West Burger Bar</a>
+          </td>
+          <td>
+            Americana.<br />
+            Fun things to do in the sand.<br />
+            Bountiful toppers.<br />
+          </td>
+          <td>🍔🍟</td>
         </tr>
       </table>
 </body>
